--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <script type="module" src="./index.js"></script>
 
     <script src="./js/dark-mode.js"></script>
-    <script src="./js/loader.js"></script>
+    <!-- <script src="./js/loader.js"></script> -->
 
     <script src="./js/api-consume.js" ></script>
     <script src="./js/nav.js" ></script>
