--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,7 @@
 
     <script src="./js/dark-mode.js"></script>
     <script src="./js/loader.js"></script>
-
-    <script src="./js/api-consume.js" ></script>
+    <!-- <script src="./js/api-consume.js" ></script> -->
     <script src="./js/nav.js" ></script>
   </body>
 </html>
