--- a/src/index.html
+++ b/src/index.html
@@ -35,5 +35,9 @@
 
 
     <script src="./js/nav.js" ></script>
+
+    <!-- Header Scripts -->
+    <script src="./js/search-keyword.js" type="module"></script>
+    <script src="./js/api-consume.js" type="module"></script>
   </body>
-</html>
+</html>  
