Se acutaliza la paginacion y los estilos del body en un solo un archivo (body.js)

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Filmoteka</title>
     <link rel="shortcut icon" href="./images/film.png">
+    <link rel="stylesheet" href="../src/components/bodyStyles.scss">
     <link rel="stylesheet" href="./sass/index.scss" />
     <link rel="stylesheet" href="./sass/components/_loader.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
