--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/main.html"></include>
     <include src="./partials/movie-list.html"></include>
-    <p id="demo">hello</p>
+
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-footer.html"></include>
     <include src="./partials/modal-poster.html"></include>
@@ -42,8 +42,11 @@
     <script src="./js/loader.js"></script>
     <script src="./js/button-scroll.js" type="module"></script>
     <script src="./js/poster-modal.js"></script>
-
+ 
     <!-- <script src="./js/api-consume.js" ></script> -->
+
+    <script src="./components/body.js"></script>
+
 
     <!-- Footer Scripts -->
     <script src="./js/modal-footer.js"></script>
