--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,8 @@
     />
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
     <!-- FontAwesome -->
-    <script src="https://kit.fontawesome.com/85f7c828c7.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/85f7c828c7.js" crossorigin="anonymous" type="module"></script>
     <!-- ⬇️ -->
-    <script src="./components/body.js"></script>
     <!-- ⬆️ -->
 
   </head>
@@ -48,7 +47,7 @@
  
     <!-- <script src="./js/api-consume.js" ></script> -->
 
-    <script src="./components/body.js"></script>
+    <script src="./components/body.js" type="module"></script>
 
 
     <!-- Footer Scripts -->
